--- a/sample.env
+++ b/sample.env
@@ -1,5 +1,10 @@
 # Medium Scraper Configuration
 
+# Target URL - Replace with your Medium list URL
+# Format: https://medium.com/@username/list/your-list-id
+# Example: https://medium.com/@gomboczmarton/list/coding-de70d3863f9a
+MEDIUM_LIST_URL=https://medium.com/@username/list/your-list-id
+
 # Browser settings
 HEADLESS=true
 BROWSER_TIMEOUT=30000
